test/translator/error/static.prez
class Base {
  int n;

  static String test() {
    print(this.n);
    return "Base";
  }
}

class Derived : Base {}

void main() {
  print(Derived.test());
}
